<resources>
    <string name="app_name">NoteApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header">Тема</string>
    <string name="text">Текст заметки</string>
    <string name="note">Заметка</string>
    <string name="search">Поиск</string>
    <string name="add_note">Написать заметку</string>
    <string name="important">Важные заметки</string>
    <string name="home">Все заметки</string>
    <string name="settings">Настройки</string>
    <string name="edit_note">Изменить</string>
    <string name="add_to_important">В важные</string>
    <string name="delete">Удалить</string>
    <string name="about">О приложении</string>
    <string name="drawer_menu_username">Имя пользователя</string>
    <string name="drawer_menu_user_email">Адрес электронной почты</string>
    <string name="nav_drawer_open">Открыто</string>
    <string name="nav_drawer_close">Закрыто</string>
    <string name="modify_note">Редактировать</string>
    <string name="save_note">Сохранить</string>
    <string name="delete_note">Удалить заметку</string>
    <string name="open_note">Открыть</string>
    <string name="note_is_imortant">Заметка помечена как важная</string>
    <string name="note_isnt_important">Заметка больше не является важной</string>
    <string name="delete_from_important">Убрать из важных</string>
    <string name="continue_button">Продолжить</string>
    <string name="sign_out_button_text">Выйти</string>
    <string name="sign_in_button_text">Войти</string>
    <string name="snackbar_delete_note">Заметка удалена</string>
    <string name="snackbar_action_undo">Отмена</string>
    <string name="alert_dialog_not_saved_note">Вы собираетесь закрыть не сохраненную заметку?</string>
    <string name="alert_dialog_close_with_save">Закрыть и сохранить</string>
    <string name="alert_dialog_close_not_save">Закрыть без сохранения</string>
    <string name="dialog_close_title_contains">Предупреждение!</string>
    <string name="dialog_close_text_contains">Вы изменили заметку и закрываете ее без сохранения.</string>
    <string name="button_cancel_text">Отмена</string>
    <string name="dialog_close_button_close_without_save_text">Закрыть без сохранения</string>
    <string name="dialog_close_button_save_and_close">Сохранить и закрыть</string>
</resources>