<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_main_search_button"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:showAsAction="always"
        android:visible="false"/>
    <item
        android:id="@+id/menu_bottom_save_note"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/save_note"
        app:showAsAction="ifRoom"
        android:visible="false"/>
    <item
        android:id="@+id/menu_bottom_delete_note"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete_note"
        app:showAsAction="ifRoom"
        android:visible="false"/>
</menu>